Added map support

--- a/src/main/resources/html/main.html
+++ b/src/main/resources/html/main.html
@@ -2,5 +2,7 @@
 <body>
 Hello, world
 <li><a href="about_us.html">About Us</a></li>
+<li><a href="map.html">Map</a></li>
 </body>
+<a href="https://github.com/yankees88888g/website-mod">This website was made for minecraft servers and was published in the public domain.</a>
 </html>
