Simplified InputStreamClass. Added mod count page in prep for mod menu. login page still not working though :(

--- a/src/main/resources/html/main.html
+++ b/src/main/resources/html/main.html
@@ -3,7 +3,8 @@
 Hello, world
 <li><a href="about_us.html">About Us</a></li>
 <li><a href="map.html">Map</a></li>
-<li><a href="login-page.html">login</a></li>
+<li><a href="mod_count.html">Mod Count</a></li>
+<li><a href="login-page.html">Login</a></li>
 </body>
 <a href="https://github.com/yankees88888g/website-mod">This website was made for minecraft servers and was published in the public domain.</a>
 </html>
