created backend login system almost done; reworked mod list

--- a/src/main/resources/login/login-page.html
+++ b/src/main/resources/login/login-page.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login-page.css">
-    <script defer src="login-page.js"></script>
 </head>
 
 <body>
@@ -20,9 +19,10 @@
     <form id="login-form">
         <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
         <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-        <input type="submit" value="Login" id="login-form-submit">
+        <button type="submit" onclick="myFunction()">Login</button>
+    <script type="text/javascript" src="login-page.js"></script>
     </form>
-
+    
 </main>
 </body>
 
