almost done with login

--- a/src/main/resources/html/main.html
+++ b/src/main/resources/html/main.html
@@ -1,8 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<link rel="stylesheet" href="main.css">
 <body>
 Hello, world
-<li><a href="about_us.html">About Us</a></li>
-<li><a href="map.html">Map</a></li>
+<button type="about_us" id="about" href="about_us.html">About us</button>
+<button type="map" id="map" href="map.html">Map</button>
 <li><a href="mod_count.html">Mod Count</a></li>
 <li><a href="login-page.html">Login</a></li>
 </body>
