finished login. must be op 4 to create account ingame then you can sign in atm only 1 account max will change.

--- a/src/main/resources/html/login-page.html
+++ b/src/main/resources/html/login-page.html
@@ -16,10 +16,12 @@
 
     </div>
         <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+    <form action="/Login" method="POST" class="form" id="loginForm">
         <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
         <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
         <button type="submit" id="submit">Login</button>
     <script src="login-page.js"></script>
+    </form>
 </main>
 </body>
 
