--- a/src/main/resources/html/main.html
+++ b/src/main/resources/html/main.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        minecraft server
+    </head>
 <link rel="stylesheet" href="main.css">
 <body>
-Hello, world
-<button type="about_us" id="about" href="about_us.html">About us</button>
-<button type="map" id="map" href="map.html">Map</button>
-<li><a href="mod_count.html">Mod Count</a></li>
-<li><a href="login-page.html">Login</a></li>
+<li><a href="about_us.html" class="button2">About_us</a></li>
+<li><a href="map.html" class="button2">Map</a></li>
+<li><a href="mod_count.html" class="button2">Mod Count</a></li>
+<li><a href="login-page.html" class="button2">Login</a></li>
+<script src="main.js"></script>
 </body>
 <a href="https://github.com/yankees88888g/website-mod">This website was made for minecraft servers and was published in the public domain.</a>
 </html>
