--- a/src/main/resources/html/main.html
+++ b/src/main/resources/html/main.html
@@ -2,13 +2,18 @@
 <html lang="en">
     <head>
         minecraft server
+        <br>
     </head>
 <link rel="stylesheet" href="main.css">
 <body>
-<li><a href="about_us.html" class="button2">About_us</a></li>
-<li><a href="map.html" class="button2">Map</a></li>
-<li><a href="mod_count.html" class="button2">Mod Count</a></li>
-<li><a href="login-page.html" class="button2">Login</a></li>
+<li><a href="/about_us" class="button">About us</a></li>
+<br>
+<li><a href="/map" class="button">Map</a></li>
+<br>
+<li><a href="/mod_count" class="button">Mod Count</a></li>
+<br>
+<li><a href="/login" class="button">Login</a></li>
+<br>
 <script src="main.js"></script>
 </body>
 <a href="https://github.com/yankees88888g/website-mod">This website was made for minecraft servers and was published in the public domain.</a>
