made panels more user-friendly. simplified handlers began work on image system for inventory.

--- a/src/main/resources/html/index/index.html
+++ b/src/main/resources/html/index/index.html
@@ -4,7 +4,7 @@
         minecraft server
         <br>
     </head>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="index.css">
 <body>
 <li><a href="/about_us" class="button">About us</a></li>
 <br>
@@ -14,7 +14,7 @@
 <br>
 <li><a href="/login" class="button">Login</a></li>
 <br>
-<script src="main.js"></script>
+<script src="index.js"></script>
 </body>
 <a href="https://github.com/yankees88888g/website-mod">This website was made for minecraft servers and was published in the public domain.</a>
 </html>
