added img to inv view. fixed many bugs. added logout page. made display more ingame like. added accessible admin panel.

--- a/src/main/resources/html/index/index.html
+++ b/src/main/resources/html/index/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>
         minecraft server
+        </title>
         <br>
     </head>
 <link rel="stylesheet" href="index.css">
@@ -13,6 +15,8 @@
 <li><a href="/mod_count" class="button">Mod Count</a></li>
 <br>
 <li><a href="/login" class="button">Login</a></li>
+<br>
+<li><a href="/logout" class="button">Logout</a></li>
 <br>
 <script src="index.js"></script>
 </body>
