--- a/src/main/resources/html/index/index.html
+++ b/src/main/resources/html/index/index.html
@@ -18,6 +18,8 @@
 <br>
 <li><a href="/logout" class="button">Logout</a></li>
 <br>
+<li><a href="/achievements" class="button">Achievements</a></li>
+<br>
 <script src="index.js"></script>
 </body>
 <a href="https://github.com/yankees88888g/website-mod">This website was made for minecraft servers and was published in the public domain.</a>
