moved everything to jetty. jetty allows new stuff and servlets.+

--- a/src/main/resources/html/login/login-page.html
+++ b/src/main/resources/html/login/login-page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="login-page.css">
+    <link rel="stylesheet" href="login/login-page.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
         <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
         <button type="submit" id="submit">Login</button>
-    <script src="login-page.js"></script>
+    <script src="login/login-page.js"></script>
     </form>
 </main>
 </body>
