--- a/src/main/resources/html/index/index.html
+++ b/src/main/resources/html/index/index.html
@@ -12,7 +12,7 @@
 <br>
 <li><a href="/map" class="button">Map</a></li>
 <br>
-<li><a href="/mod_count" class="button">Mod Count</a></li>
+<li><a href="/mod-count" class="button">Mod Count</a></li>
 <br>
 <li><a href="/login" class="button">Login</a></li>
 <br>
